# cppassist

./: .ignore  .travis.yml  AUTHORS  CMakeLists.txt  Dockerfile  LICENSE  README.md  appveyor.yml  configure  cppassist-config.cmake
codegeneration/: baselib_features.h
deploy/: CMakeLists.txt
deploy/ubuntu-ppa/: recipe.txt
deploy/ubuntu-ppa/debian/: changelog  control  rules
docs/api-docs/: CMakeLists.txt  doxyfile.in
source/: CMakeLists.txt
source/cppassist/: CMakeLists.txt
source/cppassist/include/cppassist/: baselib.h  offsetof.h
source/cppassist/include/cppassist/algorithm/: collect.h
source/cppassist/include/cppassist/cmdline/: ArgumentParser.h  ArgumentParser.inl  CommandLineAction.h  CommandLineCommand.h  CommandLineOption.h  CommandLineParameter.h  CommandLineProgram.h  CommandLineSwitch.h
source/cppassist/include/cppassist/error/: Error.h  Error.inl  Result.h  Result.inl
source/cppassist/include/cppassist/flags/: Flags.h  Flags.inl  operators.h  operators.inl
source/cppassist/include/cppassist/fs/: DescriptiveRawFile.h  FilePath.h  RawFile.h  SystemInfo.h  directorytraversal.h  fs.h  readfile.h
source/cppassist/include/cppassist/io/: DescriptiveRawFile.h  FilePath.h  RawFile.h  SystemInfo.h  directorytraversal.h  filename.h  readfile.h
source/cppassist/include/cppassist/logging/: AbstractLogHandler.h  ConsoleLogHandler.h  FileLogHandler.h  LogMessage.h  LogMessageBuilder.h  LogMessageBuilder.hpp  LogMessageBuilder.inl  formatString.h  formatString.hpp  formatString.inl  logging.h  logging.hpp  logging.inl
source/cppassist/include/cppassist/memory/: make_unique.h  make_unique.inl  offsetof.h  offsetof.inl
source/cppassist/include/cppassist/simd/: algorithm.h  algorithm.inl  allocator.h  allocator.inl  simd.h  value.h  value1.h  value1.inl  value16f.h  value16f.inl  value4f.h  value4f.inl  value8f.h  value8f.inl  vector.h  vector.inl
source/cppassist/include/cppassist/string/: conversion.h  conversion.hpp  conversion.inl  manipulation.h  manipulation.hpp  manipulation.inl  processing.h  regex.h
source/cppassist/include/cppassist/strings/: conversion.h  conversion.hpp  manipulation.h  manipulation.hpp  regex.h
source/cppassist/include/cppassist/threading/: parallelfor.h  parallelfor.hpp  parallelfor.inl
source/cppassist/include/cppassist/tokenizer/: Tokenizer.h
source/cppassist/include/cppassist/typelist/: TypeList.h  TypeList.inl
source/cppassist/source/: baselib.cpp
source/cppassist/source/cmdline/: ArgumentParser.cpp  CommandLineAction.cpp  CommandLineCommand.cpp  CommandLineOption.cpp  CommandLineParameter.cpp  CommandLineProgram.cpp  CommandLineSwitch.cpp
source/cppassist/source/error/: Error.cpp
source/cppassist/source/fs/: DescriptiveRawFile.cpp  FilePath.cpp  RawFile.cpp  SystemInfo.cpp  directorytraversal.cpp  dirent_msvc.h  fs.cpp  readfile.cpp
source/cppassist/source/io/: DescriptiveRawFile.cpp  FilePath.cpp  RawFile.cpp  SystemInfo.cpp  directorytraversal.cpp  filename.cpp  fs.cpp  readfile.cpp
source/cppassist/source/logging/: AbstractLogHandler.cpp  ConsoleLogHandler.cpp  FileLogHandler.cpp  LogMessage.cpp  LogMessageBuilder.cpp  formatString.cpp  logging.cpp
source/cppassist/source/string/: conversion.cpp  manipulation.cpp  processing.cpp  regex.cpp
source/cppassist/source/strings/: conversion.cpp  manipulation.cpp  regex.cpp
source/cppassist/source/threading/: parallelfor.cpp
source/cppassist/source/tokenizer/: Tokenizer.cpp
source/examples/: CMakeLists.txt
source/examples/cmdline/: ActionCopy.cpp  ActionCopy.h  ActionCount.cpp  ActionCount.h  ActionHelp.cpp  ActionHelp.h  CMakeLists.txt  DefaultOptions.cpp  DefaultOptions.h  Program.cpp  Program.h  main.cpp
source/examples/cmdline2/: CMakeLists.txt  main.cpp
source/examples/io/: CMakeLists.txt  main.cpp
source/examples/logging/: CMakeLists.txt  main.cpp
source/examples/simd/: CMakeLists.txt  main.cpp
source/tests/: CMakeLists.txt
source/tests/cppassist-test/: CMakeLists.txt  FilePath_test.cpp  SystemInfo_test.cpp  collect_test.cpp  conversion_test.cpp  error_test.cpp  flags_test.cpp  make_unique_test.cpp  manipulation_test.cpp  parallel_for_test.cpp  processing_test.cpp  typelist_test.cpp
source/tests/cppassist-test/iozeug-test/: CMakeLists.txt
source/tests/cppassist-test/stringzeug-test/: CMakeLists.txt
source/tests/cppassist-test/threadingzeug-test/: CMakeLists.txt
